<<<<<<< HEAD
[gd_scene load_steps=17 format=2]
=======
[gd_scene load_steps=19 format=2]
>>>>>>> 2d001988f02215e8563df670ddf0cd075e9540fa

[ext_resource path="res://src/img/A_Attack with keyboard2.png" type="Texture" id=1]
[ext_resource path="res://src/img/A_Attack with keyboard1.png" type="Texture" id=2]
[ext_resource path="res://src/img/A_Hurt.png" type="Texture" id=3]
[ext_resource path="res://src/img/A_Walk1.png" type="Texture" id=4]
[ext_resource path="res://src/img/A_Walk2.png" type="Texture" id=5]
[ext_resource path="res://src/Player/Player2.gd" type="Script" id=6]
[ext_resource path="res://src/img/A_Stay.png" type="Texture" id=7]
[ext_resource path="res://src/img/A_Attack with keyboard4.png" type="Texture" id=8]
[ext_resource path="res://src/img/A_Attack with keyboard5.png" type="Texture" id=9]
[ext_resource path="res://src/img/A_Attack with keyboard3.png" type="Texture" id=10]
<<<<<<< HEAD
[ext_resource path="res://src/Player/Mouse.gd" type="Script" id=11]
[ext_resource path="res://src/img/mouse.png" type="Texture" id=12]
=======
[ext_resource path="res://src/img/2P Icon.png" type="Texture" id=11]
[ext_resource path="res://src/img/Heart Icon.png" type="Texture" id=12]
[ext_resource path="res://src/img/Heart Icon 2.png" type="Texture" id=13]
>>>>>>> 2d001988f02215e8563df670ddf0cd075e9540fa

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
<<<<<<< HEAD
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "stay",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
=======
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ) ],
>>>>>>> 2d001988f02215e8563df670ddf0cd075e9540fa
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 3 ), null, ExtResource( 3 ), ExtResource( 3 ), null, ExtResource( 3 ), ExtResource( 3 ), null, ExtResource( 3 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 48, 58.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 17.5, 60 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 48, 56 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "full",
"speed": 5.0
} ]

[node name="Player2" type="KinematicBody2D"]
position = Vector2( 0, 8 )
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "hurt"

[node name="Body" type="Area2D" parent="."]
position = Vector2( -9, -1 )

[node name="BodyCollision" type="CollisionShape2D" parent="Body"]
position = Vector2( 9, 1 )
shape = SubResource( 5 )

[node name="AttackArea" type="Area2D" parent="." groups=["P2_keyboard"]]

[node name="AttackCollision" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 55, 0 )
shape = SubResource( 4 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

<<<<<<< HEAD
[node name="Mouse" type="Sprite" parent="."]
position = Vector2( 40, 41 )
scale = Vector2( 0.208171, 0.196498 )
texture = ExtResource( 12 )
script = ExtResource( 11 )

[node name="Position2D" type="Position2D" parent="Mouse"]
position = Vector2( -67.2524, -86.5148 )
=======
[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -60.0
margin_top = -93.0
margin_right = 197.0
margin_bottom = 164.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="Area2D" parent="."]
scale = Vector2( 0.25, 0.25 )

[node name="HP1" type="AnimatedSprite" parent="HP"]
position = Vector2( -20, -288 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 7 )
animation = "full"

[node name="HP2" type="AnimatedSprite" parent="HP"]
position = Vector2( 84, -288 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 7 )
animation = "full"

[node name="HP3" type="AnimatedSprite" parent="HP"]
position = Vector2( 188, -288 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 7 )
animation = "full"
>>>>>>> 2d001988f02215e8563df670ddf0cd075e9540fa

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Body" to="." method="_on_Body_area_entered"]
